fix: remove fixed width from calc on mobile device

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,7 +131,6 @@ main {
 }
 
 .calculator {
-  width: 320px;
   margin-inline: auto;
 }
 @media (min-width: 50em) {
